[tool.poetry]
name = "html2md"
version = "0.1.0"
description = "A python script that reads a webpage and spits out a markdown file that renders the same page."
authors = ["mungai-njoroge <geoffreymungai45@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
